2014-05-11  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Parser.pm, Texinfo/Structuring.pm(warn_non_empty_parts),
	t/test_utils.pl, texi2any.pl: warning for @part with text.
	* tp/Texinfo/Convert/DocBook.pm: add <partintro> for non empty
	@part text.  Report from Aharon Robbins.

2014-05-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes): When following menus, start at
	node in ref_list if there is one already.
	* info/session.c (info_folllow_menus): Comment about allocation added.

	* info/t/dir-file-index.sh, info/t/file-index.sh: New tests.

	* info/t/body-start.sh: New test.

2014-05-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/dir.c (dir_node, get_dir_node): Function renamed.
	(lookup_dir_entry): New function.  Case insensitive lookup
	based on that in info_follow_menus.
	* info/info.c (get_initial_file): Call lookup_dir_entry.
	* info/session.c (info_follow_menus): Unnecessary test removed.
	* info/t/dir-file-sloppily.sh: New test.

2014-05-11  Patrice Dumas  <pertusus@free.fr>

	* tp/t/test_utils.pl(test): use SKIP and not TODO, as TODO is
	assumed to fail, while there is an unknown output since different
	perl verions treat NEL differently.
	* tp/Texinfo/Common.pm(is_content_empty),
	tp/t/test_is_content_empty.t: check if a tree item contains non empty 
	content.

2014-05-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (info_parse_node): Call read_quoted_string
	to get node name.
	(read_quoted_string) [QUOTE_NODENAMES]: Interpretation of
	quoting mechanism made conditional.
	(scan_reference_target): Add comment to clarify that references
	like "*note (filename)nodename::" are not supported.
	(scan_node_contents): Free output of read_quoted_string.
	* info/search.c (skip_node_characters): Function merged into
	info_parse_node.
	* info/nodes.c (get_nodes_of_info_file): Call get_quoted_string
	to read node name from node information line.
	* info/t/reference-quoted.sh: Deleted, replaced with new tests: